--- a/public/analytics.html
+++ b/public/analytics.html
@@ -162,8 +162,16 @@
             transition: all 0.2s;
         }
 
-        .panel-actions button:hover {
+        .panel-actions button:hover,
+        .panel-actions button:focus {
             background: var(--bg-primary);
+            outline: 2px solid var(--accent);
+            outline-offset: 2px;
+        }
+
+        .btn:focus, .tab:focus, .theme-toggle:focus {
+            outline: 2px solid var(--accent);
+            outline-offset: 2px;
         }
 
         .panel-body {
@@ -222,6 +230,56 @@
             text-align: center;
             padding: 40px;
             color: var(--text-secondary);
+        }
+
+        .spinner {
+            border: 3px solid var(--border);
+            border-top: 3px solid var(--accent);
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin: 20px auto;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        .notification {
+            position: fixed;
+            top: 80px;
+            right: 20px;
+            background: var(--bg-card);
+            border: 1px solid var(--border);
+            border-radius: 8px;
+            padding: 15px 20px;
+            box-shadow: var(--shadow);
+            z-index: 2000;
+            min-width: 300px;
+            max-width: 500px;
+            animation: slideIn 0.3s ease-out;
+        }
+
+        @keyframes slideIn {
+            from { transform: translateX(400px); opacity: 0; }
+            to { transform: translateX(0); opacity: 1; }
+        }
+
+        .notification.error { border-left: 4px solid var(--danger); }
+        .notification.success { border-left: 4px solid var(--success); }
+        .notification.warning { border-left: 4px solid var(--warning); }
+
+        .notification-close {
+            float: right;
+            cursor: pointer;
+            font-weight: bold;
+            color: var(--text-secondary);
+        }
+
+        .notification-close:hover {
+            color: var(--text-primary);
         }
 
         .info-box {
@@ -286,16 +344,16 @@
             <div style="font-size: 13px; color: var(--text-secondary); margin-top: 5px;">Real-time email validation insights</div>
         </div>
         <div class="toolbar">
-            <input type="password" id="apiKey" placeholder="Admin API Key" style="width: 200px;">
-            <select id="timeRange">
+            <input type="password" id="apiKey" placeholder="Admin API Key" style="width: 200px;" aria-label="Admin API Key">
+            <select id="timeRange" aria-label="Time range selector">
                 <option value="1">Last 1 hour</option>
                 <option value="6">Last 6 hours</option>
                 <option value="24" selected>Last 24 hours</option>
                 <option value="72">Last 3 days</option>
                 <option value="168">Last 7 days</option>
             </select>
-            <button class="btn" onclick="loadAll()">🔄 Refresh</button>
-            <span class="theme-toggle" onclick="toggleTheme()">🌓</span>
+            <button class="btn" onclick="loadAll()" aria-label="Refresh dashboard data">🔄 Refresh</button>
+            <button class="theme-toggle" onclick="toggleTheme()" aria-label="Toggle dark/light theme">🌓</button>
         </div>
     </div>
 
@@ -316,8 +374,8 @@
                 <div class="panel-header">
                     <div class="panel-title">Decision Breakdown</div>
                     <div class="panel-actions">
-                        <button onclick="refreshPanel('decisions')" title="Refresh">🔄</button>
-                        <button onclick="toggleFullscreen('panel-decisions')" title="Fullscreen">⛶</button>
+                        <button onclick="refreshPanel('decisions')" title="Refresh" aria-label="Refresh decision breakdown chart">🔄</button>
+                        <button onclick="toggleFullscreen('panel-decisions')" title="Fullscreen" aria-label="Toggle fullscreen for decision breakdown">⛶</button>
                     </div>
                 </div>
                 <div class="panel-body">
@@ -690,6 +748,8 @@ LIMIT 100</textarea>
                 <div style="margin-top: 15px;">
                     <button class="btn" onclick="runCustomSQL()">▶ Run Query</button>
                     <button class="btn btn-secondary" onclick="showExampleQueries()">📝 Example Queries</button>
+                    <button class="btn btn-secondary" onclick="exportToCSV(lastQueryResult, 'query-result.csv')">📥 Export CSV</button>
+                    <button class="btn btn-secondary" onclick="exportToJSON(lastQueryResult, 'query-result.json')">📥 Export JSON</button>
                 </div>
                 <div id="query-result" class="query-result"></div>
             </div>
@@ -725,6 +785,8 @@ LIMIT 100</textarea>
                         <option value="1000">1000 rows</option>
                     </select>
                     <button class="btn" onclick="loadExplorer()">🔍 Explore</button>
+                    <button class="btn btn-secondary" onclick="exportToCSV(lastExplorerResult, 'explorer-result.csv')">📥 Export CSV</button>
+                    <button class="btn btn-secondary" onclick="exportToJSON(lastExplorerResult, 'explorer-result.json')">📥 Export JSON</button>
                 </div>
                 <div id="explorer-result" class="query-result"></div>
             </div>
@@ -766,25 +828,78 @@ LIMIT 100</textarea>
     <script>
         let charts = {};
         let currentTab = 0;
+        let loadingPanels = new Set();
 
-        // API helper
-        async function apiCall(endpoint, options = {}) {
-            const apiKey = document.getElementById('apiKey').value;
-            const response = await fetch(endpoint, {
-                ...options,
-                headers: {
-                    'X-API-Key': apiKey,
-                    'Content-Type': 'application/json',
-                    ...options.headers,
-                },
-            });
+        // Notification system
+        function showNotification(message, type = 'info', duration = 5000) {
+            const notification = document.createElement('div');
+            notification.className = `notification ${type}`;
+            notification.innerHTML = `
+                <span class="notification-close" onclick="this.parentElement.remove()">×</span>
+                <div>${message}</div>
+            `;
+            document.body.appendChild(notification);
 
-            if (!response.ok) {
-                const error = await response.json();
-                throw new Error(error.message || `HTTP ${response.status}`);
+            if (duration > 0) {
+                setTimeout(() => {
+                    notification.remove();
+                }, duration);
             }
 
-            return response.json();
+            return notification;
+        }
+
+        // Loading indicator system
+        function showLoading(panelId) {
+            loadingPanels.add(panelId);
+            const panelBody = document.querySelector(`#panel-${panelId} .panel-body, #${panelId}-table, #${panelId}-result, #${panelId}`);
+            if (panelBody && !panelBody.querySelector('.spinner')) {
+                const spinner = document.createElement('div');
+                spinner.className = 'loading';
+                spinner.innerHTML = '<div class="spinner"></div><div>Loading data...</div>';
+                spinner.setAttribute('data-spinner', 'true');
+                panelBody.innerHTML = '';
+                panelBody.appendChild(spinner);
+            }
+        }
+
+        function hideLoading(panelId) {
+            loadingPanels.delete(panelId);
+            const spinner = document.querySelector(`#panel-${panelId} [data-spinner="true"], #${panelId}-table [data-spinner="true"], #${panelId}-result [data-spinner="true"], #${panelId} [data-spinner="true"]`);
+            if (spinner) {
+                spinner.remove();
+            }
+        }
+
+        // API helper with loading states and error handling
+        async function apiCall(endpoint, options = {}) {
+            const apiKey = document.getElementById('apiKey').value;
+
+            if (!apiKey) {
+                showNotification('Please enter your Admin API Key', 'warning');
+                throw new Error('API key required');
+            }
+
+            try {
+                const response = await fetch(endpoint, {
+                    ...options,
+                    headers: {
+                        'X-API-Key': apiKey,
+                        'Content-Type': 'application/json',
+                        ...options.headers,
+                    },
+                });
+
+                if (!response.ok) {
+                    const error = await response.json().catch(() => ({ message: 'Unknown error' }));
+                    throw new Error(error.message || `HTTP ${response.status}`);
+                }
+
+                return response.json();
+            } catch (error) {
+                showNotification(`API Error: ${error.message}`, 'error');
+                throw error;
+            }
         }
 
         // Query helper
@@ -793,6 +908,59 @@ LIMIT 100</textarea>
             const encodedSQL = encodeURIComponent(sql);
             return apiCall(`/admin/analytics?query=${encodedSQL}&hours=${hours}`);
         }
+
+        // Data export helpers
+        function exportToCSV(data, filename = 'export.csv') {
+            if (!data || data.length === 0) {
+                showNotification('No data to export', 'warning');
+                return;
+            }
+
+            const columns = Object.keys(data[0]);
+            const csv = [
+                columns.join(','),
+                ...data.map(row => columns.map(col => {
+                    const value = row[col];
+                    if (value === null || value === undefined) return '';
+                    const stringValue = String(value);
+                    // Escape quotes and wrap in quotes if contains comma, quote, or newline
+                    if (stringValue.includes(',') || stringValue.includes('"') || stringValue.includes('\n')) {
+                        return `"${stringValue.replace(/"/g, '""')}"`;
+                    }
+                    return stringValue;
+                }).join(','))
+            ].join('\n');
+
+            downloadFile(csv, filename, 'text/csv');
+            showNotification(`Exported ${data.length} rows to ${filename}`, 'success');
+        }
+
+        function exportToJSON(data, filename = 'export.json') {
+            if (!data || data.length === 0) {
+                showNotification('No data to export', 'warning');
+                return;
+            }
+
+            const json = JSON.stringify(data, null, 2);
+            downloadFile(json, filename, 'application/json');
+            showNotification(`Exported ${data.length} rows to ${filename}`, 'success');
+        }
+
+        function downloadFile(content, filename, mimeType) {
+            const blob = new Blob([content], { type: mimeType });
+            const url = URL.createObjectURL(blob);
+            const link = document.createElement('a');
+            link.href = url;
+            link.download = filename;
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+            URL.revokeObjectURL(url);
+        }
+
+        // Store last query result for export
+        let lastQueryResult = null;
+        let lastExplorerResult = null;
 
         // Theme toggle
         function toggleTheme() {
@@ -1722,6 +1890,7 @@ LIMIT 100</textarea>
 
         // Refresh individual panel
         async function refreshPanel(panel) {
+            showLoading(panel);
             try {
                 switch(panel) {
                     case 'decisions': await loadDecisions(); break;
@@ -1749,13 +1918,17 @@ LIMIT 100</textarea>
                 }
             } catch (error) {
                 console.error(`Error refreshing panel ${panel}:`, error);
-                alert(`Error: ${error.message}`);
+                showNotification(`Failed to refresh ${panel}: ${error.message}`, 'error');
+            } finally {
+                hideLoading(panel);
             }
         }
 
         // Load all dashboard data
         async function loadAll() {
             if (currentTab !== 0) return; // Only load if on dashboard tab
+
+            const notification = showNotification('Loading dashboard data...', 'info', 0);
 
             try {
                 await loadStats();
@@ -1783,9 +1956,12 @@ LIMIT 100</textarea>
                     loadPatternConfidence(),
                     loadEvents(),
                 ]);
+                notification.remove();
+                showNotification('Dashboard loaded successfully', 'success', 3000);
             } catch (error) {
                 console.error('Error loading dashboard:', error);
-                alert(`Error: ${error.message}`);
+                notification.remove();
+                showNotification(`Failed to load dashboard: ${error.message}`, 'error');
             }
         }
 
@@ -1793,17 +1969,29 @@ LIMIT 100</textarea>
         async function runCustomSQL() {
             const sql = document.getElementById('custom-sql').value.trim();
             if (!sql) {
-                alert('Please enter a SQL query');
+                showNotification('Please enter a SQL query', 'warning');
                 return;
             }
 
+            // Basic SQL validation warning
+            const dangerousPatterns = /DROP|DELETE|UPDATE|INSERT|ALTER|CREATE|TRUNCATE|EXEC|EXECUTE/i;
+            if (dangerousPatterns.test(sql)) {
+                showNotification('Warning: Potentially dangerous SQL keywords detected. Analytics Engine is read-only, but be cautious.', 'warning', 10000);
+            }
+
+            showLoading('query-result');
             try {
                 const data = await query(sql);
 
                 if (!data.data || data.data.length === 0) {
+                    lastQueryResult = null;
+                    hideLoading('query-result');
                     document.getElementById('query-result').innerHTML = '<div class="info-box">No results found</div>';
                     return;
                 }
+
+                // Store result for export
+                lastQueryResult = data.data;
 
                 const columns = Object.keys(data.data[0]);
 
@@ -1840,8 +2028,11 @@ LIMIT 100</textarea>
                     </table>
                 `;
 
+                hideLoading('query-result');
                 document.getElementById('query-result').innerHTML = html;
+                showNotification(`Query returned ${data.data.length} rows`, 'success', 3000);
             } catch (error) {
+                hideLoading('query-result');
                 document.getElementById('query-result').innerHTML = `<div class="info-box" style="color: var(--danger);">Error: ${error.message}</div>`;
             }
         }
@@ -1929,6 +2120,8 @@ LIMIT 100</textarea>
             const view = document.getElementById('explorer-view').value;
             const timeMinutes = parseInt(document.getElementById('explorer-time').value);
             const limit = parseInt(document.getElementById('explorer-limit').value);
+
+            showLoading('explorer-result');
 
             // Convert minutes to proper SQL interval
             let timeInterval = '';
@@ -2018,9 +2211,14 @@ LIMIT 100</textarea>
                 const data = await query(sql);
 
                 if (!data.data || data.data.length === 0) {
+                    lastExplorerResult = null;
+                    hideLoading('explorer-result');
                     document.getElementById('explorer-result').innerHTML = '<div class="info-box">No results found</div>';
                     return;
                 }
+
+                // Store result for export
+                lastExplorerResult = data.data;
 
                 const columns = Object.keys(data.data[0]);
 
@@ -2064,8 +2262,11 @@ LIMIT 100</textarea>
                     </table>
                 `;
 
+                hideLoading('explorer-result');
                 document.getElementById('explorer-result').innerHTML = html;
+                showNotification(`Loaded ${data.data.length} rows`, 'success', 3000);
             } catch (error) {
+                hideLoading('explorer-result');
                 document.getElementById('explorer-result').innerHTML = `<div class="info-box" style="color: var(--danger);">Error: ${error.message}</div>`;
             }
         }
